# marl-tag

./: .gitignore  README.md  odom_reader.py  pyproject.toml
maddpg/: PettigZoo_StableBaseline.ipynb  agent_chosing_action.py  maddpg.py  networks.py  run.py  run_trained_network.py
maddpg/.ipynb_checkpoints/: PettigZoo_StableBaseline-checkpoint.ipynb  PettigZoo_StableBaseline_LSTM-checkpoint.ipynb
maddpg/data/: maddpg_scores.npy  maddpg_steps.npy
maddpg/decent_train/: agent_0_critic  agent_0target__actor  agent_1_target__critic  agent_2target__actor  agent_3_actor
maddpg/tmp/maddpg/simple_tag/: agent_0_actor  agent_0_critic  agent_0_target__critic  agent_0target__actor  agent_1_actor  agent_1_critic  agent_1_target__critic  agent_1target__actor  agent_2_actor  agent_2_critic  agent_2_target__critic  agent_2target__actor  agent_3_actor  agent_3_critic  agent_3_target__critic  agent_3target__actor
src/control/: setup.py
src/control/checkpoints/: agent_1target__actor  agent_2_critic
src/control/control/: turtlebot_controller.py
src/nn_model/: agent.py  maddpg.py  main.py  networks.py
src/pettingzoo_test/: package.xml  setup.cfg  setup.py
src/pettingzoo_test/pettingzoo_test/: test.py
src/pettingzoo_test/src/control/: package.xml
src/reading_odometry/: setup.cfg  setup.py
src/turtle_tag/: package.xml  setup.cfg  setup.py
src/turtle_tag/turtle_tag/: cleanrl.py  simple_tag.py  turtle_agent.py  turtlesim_environment.py
src/turtlebot3_machine_learning/maddpg/: maddpg.py  run.py  run_trained_network.py
(+22 files in other folders)
